# TaskWatcherBot

./: .gitignore  Dockerfile  README.md  auth_gsheets.py  auth_telethon.py  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  example.env  mypy.ini  pyproject.toml
app/: __main__.py  _bootstrap.py  _config.py  bootstrap.py  config.py  container.py  handlers.py  middleware.py  states.py
app/dao/: __init__.py  spreadsheet.py  user.py
app/handlers/: __init__.py  linking.py  owner.py  stats.py  user.py
app/jobs/: notify.py  sheets.py
app/models/: cloudtext.py
app/models/cloudtext/: __init__.py  client.py  models.py  parsing.py
app/models/db/: __init__.py  spreadsheet.py  user.py
app/models/gsheets/: __init__.py  client.py  filler.py  helpers.py
app/services/: groups.py  user.py
migrations/: 0001_create_users.sql  0002_create_spreadsheet.sql
tests/: test_models.py  test_notify.py  test_parsing.py  test_services.py
