[project]
name = "taskwatcherbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26.0",
    "aiohttp[speedups]>=3.13.3",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "asyncpg-stubs>=0.31.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "telethon>=1.42.0",
    "yoyo-migrations>=9.0.0",
]
